restaurant cards try

--- a/inPinUI/Base.lproj/Main.storyboard
+++ b/inPinUI/Base.lproj/Main.storyboard
@@ -19,6 +19,13 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JFL-T7-5Ff" customClass="GMSMapView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EaY-0E-fuI" customClass="RestaurantCardsView" customModule="inPinUI" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="706" width="398" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <textField opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Destination" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Arw-mm-98R">
@@ -39,6 +46,7 @@
                     <connections>
                         <outlet property="addressLabel" destination="Arw-mm-98R" id="4If-vT-r3T"/>
                         <outlet property="mapView" destination="JFL-T7-5Ff" id="Q5V-M1-Hzy"/>
+                        <outlet property="restaurantCards" destination="EaY-0E-fuI" id="d42-Kv-U1z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
